--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
       ::-webkit-scrollbar-thumb { background: #3f3f46; border-radius: 4px; }
       ::-webkit-scrollbar-thumb:hover { background: #52525b; }
     </style>
-  </head>
+  <script type="importmap">
+{
+  "imports": {
+    "lucide-react": "https://esm.sh/lucide-react@^0.574.0",
+    "react": "https://esm.sh/react@^19.2.4",
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
+  }
+}
+</script>
+</head>
   <body>
     <div id="root"></div>
   </body>
